Fixed sidebar dark mode styles for active dropdowns

--- a/ghostwriter/static/css/base_styles.css
+++ b/ghostwriter/static/css/base_styles.css
@@ -132,8 +132,8 @@
 
   /* SIDEBAR */
   --sidebar-text-color: #c9c9c9;
-  --sidebar-active-text-color: #9AA5E8;
-  --sidebar-header-text-color: #fff;
+  --sidebar-active-text-color: #5FC587;
+  --sidebar-header-text-color: #1a1a1a;
   --sidebar-link-text-color: #9CAAB6;
 
   --sidebar-background-color: #252525;
